# proctor

./: .todo2  AGENTS.md  Cargo.toml  Procfile  Procfile.example  README.md  install.sh
.github/workflows/: release.yml
demo/: Procfile  docker-compose.yml  go.mod  main.go  schema.sql
scripts/: caddylogs
src/: main.rs  output.rs  readiness.rs  runner.rs
src/orchestrator/: graph.rs  mod.rs  runner.rs  watcher.rs
src/parser/: ast.rs  mod.rs  tokenizer.rs
